apps/infra/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: infra
  labels:
    app: homarr
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app: homarr
  ports:
    - port: 7575
      targetPort: 7575
  type: ClusterIP
