apps/infra/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  namespace: infra
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - homarr.phoenyxlab.xyz
  rules:
    - host: homarr.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  number: 7575
